@@ -1520,7 +1520,8 @@ static int _batch_launch_defer(queued_request_t *queued_req_ptr)
 	if (!IS_NODE_POWER_SAVE(node_ptr) && !IS_NODE_NO_RESPOND(node_ptr)) {
 		/* ready to launch, adjust time limit for boot time */
 		int resume_timeout = slurm_get_resume_timeout();
-		if ((job_ptr->start_time + resume_timeout) >= now)
+		if ((job_ptr->time_limit != INFINITE)
+		    && ((job_ptr->start_time + resume_timeout) >= now))
 			job_ptr->end_time = now + (job_ptr->time_limit * 60);
 		queued_req_ptr->last_attempt = (time_t) 0;
 		return 0;
